5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4013/executions/1756_1183.log
== TEST (2019-05-28 18:12:19) 
-- CODE:
from numpy import*
v = array(eval("vetor =") , dtype: int)

-- ERROR:
File "XXXX", line 2
    v = array(eval("vetor =") , dtype: int)
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 18:12:33) 
-- CODE:
from numpy import*
v = array(eval("vetor =" , dtype: int))

-- ERROR:
File "XXXX", line 2
    v = array(eval("vetor =" , dtype: int))
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 18:13:17) 
-- CODE:
from numpy import*
v = array(eval(input("vetor =" , dtype: int))

-- ERROR:
File "XXXX", line 2
    v = array(eval(input("vetor =" , dtype: int))
                                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 18:13:30) 
-- CODE:
from numpy import*
v = array(eval(input("vetor =" , dtype: int)))

-- ERROR:
File "XXXX", line 2
    v = array(eval(input("vetor =" , dtype: int)))
                                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 18:13:42) 
-- CODE:
from numpy import*
v = array(eval(input("vetor =")))

-- EXECUTION TIME:
0.592339
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:

-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:

-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
vetor =
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 18:13:43) 
-- CODE:
from numpy import*
v = array(eval(input("vetor =")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 18:34:22) 
-- CODE:
from numpy import*
v = array(eval(input("vetor dos inteiros =")))

i = 0
j = 0 
while(i < size(v)):
	if(v[i] > 0):
		j = j + 1
	i = i + 1

i = 0
j = 0
a = zeros(j , dtype: int)
while(j < size(v)):
	if(v[i] >= 0):
		a[j] = v[i]
	else:
		while(v[i] < 0):
			i = i + 1
		a[j] = v[i]
	i = i + 1
	j = j + 1
print(a)
-- ERROR:
File "XXXX", line 13
    a = zeros(j , dtype: int)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 18:34:43) 
-- CODE:
from numpy import*
v = array(eval(input("vetor dos inteiros =")))

i = 0
j = 0 
while(i < size(v)):
	if(v[i] > 0):
		j = j + 1
	i = i + 1

i = 0
j = 0
a = zeros(j , dtype=int)
while(j < size(v)):
	if(v[i] >= 0):
		a[j] = v[i]
	else:
		while(v[i] < 0):
			i = i + 1
		a[j] = v[i]
	i = i + 1
	j = j + 1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 18:35:31) 
-- CODE:
from numpy import*
v = array(eval(input("vetor dos inteiros =")))

i = 0
j = 0 
while(i < size(v)):
	if(v[i] > 0):
		j = j + 1
	i = i + 1

i = 0
j = 0
a = zeros(j , dtype=int)
while(j < size(a)):
	if(v[i] >= 0):
		a[j] = v[i]
	else:
		while(v[i] < 0):
			i = i + 1
		a[j] = v[i]
	i = i + 1
	j = j + 1
print(a)
-- EXECUTION TIME:
0.38029
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 18:35:32) 
-- CODE:
from numpy import*
v = array(eval(input("vetor dos inteiros =")))

i = 0
j = 0 
while(i < size(v)):
	if(v[i] > 0):
		j = j + 1
	i = i + 1

i = 0
j = 0
a = zeros(j , dtype=int)
while(j < size(a)):
	if(v[i] >= 0):
		a[j] = v[i]
	else:
		while(v[i] < 0):
			i = i + 1
		a[j] = v[i]
	i = i + 1
	j = j + 1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 18:36:32) 
-- CODE:
from numpy import*
v = array(eval(input("vetor dos inteiros =")))

i = 0
j = 0 
while(i < size(v)):
	if(v[i] > 0):
		j = j + 1
	i = i + 1

i = 0
a = zeros(j , dtype=int)
j = 0
while(j < size(a)):
	if(v[i] >= 0):
		a[j] = v[i]
	else:
		while(v[i] < 0):
			i = i + 1
		a[j] = v[i]
	i = i + 1
	j = j + 1
print(a)
-- EXECUTION TIME:
0.423459
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
